# redis

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  command.md  feature.md  sentinel.c  sentinel.conf  timeout.c  tls.sh
example/: kqueue.c  settimer.c
images/: wbep2png.py
py/: a.py  buf.py  data.txt  format.py  replace.py  set.py
src/: Makefile  acl.c  adlist.c  adlist.h  ae.c  ae.h  ae_epoll.c  ae_evport.c  ae_kqueue.c  ae_select.c  anet.c  anet.h  aof.c  asciilogo.h  atomicvar.h  bio.c  bio.h  bitops.c  blocked.c  call_reply.c  call_reply.h  childinfo.c  cli_common.c  cli_common.h  cluster.c  cluster.h  commands.c  config.c  config.h  connection.c  connection.h  connhelpers.h  crc16.c  crc16_slottable.h  crc64.c  crc64.h  crcspeed.c  db.c  debug.c  debugmacro.h  (+203 more)
src/commands/: acl-cat.json  acl-deluser.json  acl-dryrun.json  acl-genpass.json  acl-getuser.json  acl-help.json  acl-list.json  acl-load.json  acl-log.json  acl-save.json  acl-setuser.json  acl-users.json  acl-whoami.json  acl.json  append.json  asking.json  bgrewriteaof.json  bgsave.json  bitcount.json  bitfield.json  bitfield_ro.json  bitop.json  bitpos.json  blmove.json  blmpop.json  blpop.json  brpop.json  brpoplpush.json  bzmpop.json  bzpopmax.json  bzpopmin.json  client-caching.json  client-getname.json  client-getredir.json  client-help.json  client-id.json  client-info.json  client-kill.json  client-list.json  client-no-evict.json  (+341 more)
src/modules/: CMakeLists.txt  helloacl.c  helloblock.c  hellodict.c  hellohook.c  hellotimer.c  hellotype.c  helloworld.c
t/缓存一致性/: read.md
tests/: README.md
tests/assets/: default.conf  minimal.conf
tests/modules/: aclcheck.c  auth.c  basics.c  blockedclient.c  blockonbackground.c  blockonkeys.c  cmdintrospection.c  commandfilter.c  datatype.c  datatype2.c  defragtest.c  eventloop.c  fork.c  getchannels.c  getkeys.c  hash.c  hooks.c  infotest.c  keyspace_events.c  keyspecs.c  list.c  mallocsize.c  misc.c  moduleconfigs.c  moduleconfigstwo.c  publish.c  reply.c  scan.c  stream.c  subcommands.c  test_lazyfree.c  testrdb.c  timer.c  zset.c
utils/: check_include.py  corrupt_rdb.c  file_unix.py  generate-command-code.py  generate-commands-json.py  kill-redis.py  redis_init_script  tracking_collisions.c
utils/graphs/commits-over-time/: README.md
utils/lru/: lfu-simulation.c
utils/srandmember/: README.md
