cmake_minimum_required(VERSION 3.9)
set(CMAKE_BUILD_TYPE "Debug")
add_library(helloacl SHARED helloacl.c)
set_target_properties(helloacl PROPERTIES PREFIX "" SUFFIX ".so")
add_library(helloblock SHARED helloblock.c)
set_target_properties(helloblock PROPERTIES PREFIX "" SUFFIX ".so")
add_library(hellocluster SHARED hellocluster.c)
set_target_properties(hellocluster PROPERTIES PREFIX "" SUFFIX ".so")
add_library(hellodict SHARED hellodict.c)
set_target_properties(hellodict PROPERTIES PREFIX "" SUFFIX ".so")
add_library(hellohook SHARED hellohook.c)
set_target_properties(hellohook PROPERTIES PREFIX "" SUFFIX ".so")
add_library(hellotimer SHARED hellotimer.c)
set_target_properties(hellotimer PROPERTIES PREFIX "" SUFFIX ".so")
add_library(hellotype SHARED hellotype.c)
set_target_properties(hellotype PROPERTIES PREFIX "" SUFFIX ".so")
add_library(helloworld SHARED helloworld.c)
set_target_properties(helloworld PROPERTIES PREFIX "" SUFFIX ".so")